static/styles/yara_rule_designer.css
/* ... */
#yara-rule-designer-leftpane-container {
    /* Bootstrap: A border in name only, each individual child element
       needs their own (transparent) border to stay in-bounds. */
    border-right:1px solid var(--yara-rule-designer-border-color);
    border-bottom: 1px solid var(--yara-rule-designer-border-color);
    background: var(--yara-rule-designer-leftpane-background);
    overflow-x: hidden;
}

#yara-rule-designer-buttons {
    /* Bootstrap: If you actually remove this border, the contents flee out of bounds. */
    border-right:1px solid transparent;
    border-bottom:1px solid var(--yara-rule-designer-border-color);
    padding: 0;
    /*width: 100%;*/
}

#load-rule-button {
    background: var(--button-default-background);
    border: none;
    color: var(--button-default-color);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
}

#load-rule-button:hover {
  background: var(--button-help-background-hover);
  color: var(--button-help-color-hover);
}

#submit-rule-button {
    background: var(--button-submit-background);
    border: none;
    color: var(--button-submit-color);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
}

#submit-rule-button:hover {
    background: var(--button-submit-background-hover);
    color: var(--button-submit-color-hover);
}

#clear-rule-button {
    background: var(--button-clear-background);
    border: none;
    color: var(--button-clear-color);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
}

#clear-rule-button:hover {
    background: var(--button-clear-background-hover);
    color: var(--button-clear-color-hover);
}

#show-help-button {
    background: var(--button-default-background);
    border: none;
    color: var(--button-default-color);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
}

#show-help-button:hover {
  background: var(--button-help-background-hover);
  color: var(--button-help-color-hover);
}

#yara-rule-designer-tags {
    color: var(--yara-rule-designer-tags-color);
    margin-left: 10px;
    margin-top: 10px;
    background: transparent;
}

#yara-rule-designer-operators {
    overflow: auto;
    /* Bootstrap: If you actually remove this border, the contents flee out of bounds. */
    border-top: 1px solid var(--yara-rule-designer-border-color);
    border-right:1px solid transparent;
    border-bottom:1px solid var(--yara-rule-designer-border-color);
    background: transparent;
}

#yara-rule-designer-artifact-types {
    /* Bootstrap: If you actually remove this border, the contents flee out of bounds. */
    border-right:1px solid transparent;
    background: transparent;
}

#yara-rule-designer-artifacts {
    /* Bootstrap: If you actually remove this border, the contents flee out of bounds. */
    border-right:1px solid transparent;
    border-top: 1px solid var(--yara-rule-designer-border-color);
    border-bottom:1px solid transparent;
    background: transparent;
}

/* Override designer span properties for items that are put in the editor element */
#yara-rule-designer-editor > span {
    margin: 5px 0 5px 0;    /* Spacing between inline span elements (top, right, bottom, left)*/
    padding: 10px;
    border-radius: 0;
}

.condition-keyword {
    display: inline-table;
    color: var(--condition-keyword-color);
    font-weight: bold;
    background: var(--condition-keyword-background);
    cursor: pointer;
}

.condition-encapsulator {
    display: inline-table;
    color: var(--condition-keyword-color);
    font-weight: bold;
    background: var(--condition-keyword-background);
    cursor: pointer;
}

.condition-artifact {
    display: inline-table;
    color: var(--draggable-artifact-color);
    background-color: var(--draggable-artifact-background);
    cursor: pointer;
}

.condition-artifact-type {
    display: inline-table;
    color: var(--draggable-artifact-type-color);
    background-color: var(--draggable-artifact-type-background);
    cursor: pointer;
}

/* MODAL */

/* The Modal (background) */
.custom-modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

.close-custom-modal {
    float: right;
    font-size: 22pt;
    cursor: pointer;
}

 /* Modal Header */
.custom-modal-header {
  padding: 2px 16px;
  background: var(--modal-background-info);
  color: var(--modal-color-info);
}

/* Modal Body */
.custom-modal-body {
    background: var(--modal-background);
    color: var(--modal-color);
    padding: 2px 16px;
    overflow: hidden;
    max-height: 90vh; /* For 90% screen height (using viewport) */
}

.custom-modal-body-middle {
    background: var(--modal-background);
    color: var(--modal-color);
    padding: 2px 16px;
    overflow: auto;
    /* For 90% screen height (using viewport).
       NB: 1% less than parent to avoid scroll in parent .
           10% less to avoid items vanishing behind footer. */
    max-height: 80vh;
}

.custom-modal-body a {
    color: var(--modal-a-color);
}

/* Modal Footer */
.custom-modal-footer {
  padding: 2px 16px;
  background: var(--modal-background-info);
  color: var(--modal-color-info);
}

/* Modal Content */
.custom-modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 60%;
    max-height: 100%;
    overflow: auto; /* Enable scroll if needed */
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    animation-name: animate-in-place;
    animation-duration: 0.4s;
}

.size-wide {
    width: 90%;
}

.size-fullwidth {
    width: 100%;
}
/* ... */

